Code cleanup and G1GC jvm setting